Rename the assessment templatetags file

--- a/platform_code/assessment/templates/assessment/element-feedback.html
+++ b/platform_code/assessment/templates/assessment/element-feedback.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load add_attr %}
+{% load assessment_tags %}
 {% load i18n %}
 
 <!-- Feedback for each evaluation element -->
