--- a/platform_code/assessment/templates/assessment/evaluation.html
+++ b/platform_code/assessment/templates/assessment/evaluation.html
@@ -1,6 +1,6 @@
 {% extends 'base-evaluation.html' %}
 {% load static %}
-{% load add_attr %}
+{% load assessment_tags %}
 {% load home_tags %}
 {% load i18n %}
 
