--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load home_tags %}
-{% load add_attr %}
+{% load assessment_tags %}
 {% load i18n %}
 {% load markdownify %}
 
@@ -322,7 +322,7 @@
                                                         <div class="grid-item">
                                                             <li class="list-with-disc margin-10">
                                                                 {% if resource.text %}
-                                                                [{{resource.type}}] - {{resource.text|markdownify}}
+                                                                [{{resource.type}}] - {{resource.text|markdownify|format_resource_link}}
                                                                 {% endif %}
                                                             </li>
                                                         </div>
