--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -1,5 +1,5 @@
 {% extends 'base-evaluation.html' %}
-{% load add_attr %}
+{% load assessment_tags %}
 {% load static %}
 {% load i18n %}
 {% load markdownify %}
