--- a/platform_code/home/templates/home/logout-page.html
+++ b/platform_code/home/templates/home/logout-page.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load add_attr %}
+{% load assessment_tags %}
 {% load i18n %}
 
 <h3 class="settings-subtitle">{% trans "Do you want to logout?" %}</h3>
