--- a/platform_code/assessment/static/css/element-card.css
+++ b/platform_code/assessment/static/css/element-card.css
@@ -4,7 +4,7 @@
     margin-bottom: 25px; /* Added */
     margin-bottom: 25px;
     position: relative;
-    border-radius: 0.5em;
+    /* border-radius: 0.5em; */
 
 }
 
