--- a/platform_code/home/templates/home/dashboard/dashboard-admin-evaluations-tab.html
+++ b/platform_code/home/templates/home/dashboard/dashboard-admin-evaluations-tab.html
@@ -69,7 +69,7 @@
                 </table>
             </div>
         </div>
-            <div class="row">
+            <div class="row margin-20">
             <div class="col-sm-4">
                 <table class="dash-stats-table" id="evals-nb-total-table">
                     <thead class="thead-light">
